--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,24 +11,24 @@
   // Turn off tsc task auto detection since we have the necessary tasks as npm scripts
   "typescript.tsc.autoDetect": "off",
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#2f7c47",
-    "activityBar.activeBorder": "#422c74",
-    "activityBar.background": "#2f7c47",
-    "activityBar.foreground": "#e7e7e7",
-    "activityBar.inactiveForeground": "#e7e7e799",
-    "activityBarBadge.background": "#422c74",
-    "activityBarBadge.foreground": "#e7e7e7",
-    "sash.hoverBorder": "#2f7c47",
-    "statusBar.background": "#215732",
+    "activityBar.activeBackground": "#ba878b",
+    "activityBar.activeBorder": "#c4dcc2",
+    "activityBar.background": "#ba878b",
+    "activityBar.foreground": "#15202b",
+    "activityBar.inactiveForeground": "#15202b99",
+    "activityBarBadge.background": "#c4dcc2",
+    "activityBarBadge.foreground": "#15202b",
+    "sash.hoverBorder": "#ba878b",
+    "statusBar.background": "#a7676c",
     "statusBar.foreground": "#e7e7e7",
-    "statusBarItem.hoverBackground": "#2f7c47",
-    "statusBarItem.remoteBackground": "#215732",
+    "statusBarItem.hoverBackground": "#ba878b",
+    "statusBarItem.remoteBackground": "#a7676c",
     "statusBarItem.remoteForeground": "#e7e7e7",
-    "titleBar.activeBackground": "#215732",
+    "titleBar.activeBackground": "#a7676c",
     "titleBar.activeForeground": "#e7e7e7",
-    "titleBar.inactiveBackground": "#21573299",
+    "titleBar.inactiveBackground": "#a7676c99",
     "titleBar.inactiveForeground": "#e7e7e799",
-    "tab.activeBorder": "#2f7c47"
+    "tab.activeBorder": "#ba878b"
   },
-  "peacock.color": "#215732"
+  "peacock.color": "#a7676c"
 }
