--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,12 @@
     "target": "ES2020",
     "lib": ["ES2020"],
     "sourceMap": true,
-    "strict": true
+    "strict": true,
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["./src/*"],
+      "~/*": ["./*"]
+    }
   },
 
   "include": ["src/*", "src/**/*"]
