--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "displayName": "Likan",
   "description": "一个插件",
   "publisher": "likan",
-  "version": "0.6.13",
+  "version": "0.6.18",
   "repository": "https://github.com/LIiErkang/likan",
   "engines": {
     "vscode": "^1.66.0"
   },
-  "icon": "./public/likan.png",
+  "browser": "./lib/index.js",
+  "main": "./lib/index.js",
+  "license": "MIT",
+  "icon": "public/icon.png",
   "categories": [
     "Other",
     "Snippets",
@@ -17,7 +20,6 @@
   "activationEvents": [
     "onStartupFinished"
   ],
-  "main": "./dist/extension.js",
   "contributes": {
     "commands": [
       {
@@ -155,7 +157,8 @@
     "watch-tests": "tsc -p . -w --outDir out",
     "pretest": "npm run compile-tests && npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
-    "test": "node ./out/test/runTest.js"
+    "test": "node ./out/test/runTest.js",
+    "pub": "node ./dist/scripts/publish.js 没有日志"
   },
   "devDependencies": {
     "@types/glob": "^7.2.0",
