--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,14 +3,15 @@
     "module": "commonjs",
     "target": "ES2020",
     "lib": ["ES2020"],
-    "sourceMap": true,
+    "sourceMap": false,
     "strict": true,
     "baseUrl": "./",
     "paths": {
       "@/*": ["./src/*"],
       "~/*": ["./*"]
-    }
+    },
+    "outDir": "dist"
   },
-
-  "include": ["src/*", "src/**/*"]
+  "include": ["./scripts/", "./src/"],
+  "exclude": ["node_modules", "dist", "lib"]
 }
