--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Likan",
   "description": "一个插件",
   "publisher": "likan",
-  "version": "0.6.18",
+  "version": "0.6.21",
   "repository": "https://github.com/LIiErkang/likan",
   "engines": {
     "vscode": "^1.66.0"
@@ -150,14 +150,9 @@
   },
   "scripts": {
     "vscode:prepublish": "npm run package",
-    "compile": "webpack",
-    "watch": "webpack --watch",
-    "package": "webpack --mode production --devtool hidden-source-map",
-    "compile-tests": "tsc -p . --outDir out",
-    "watch-tests": "tsc -p . -w --outDir out",
-    "pretest": "npm run compile-tests && npm run compile && npm run lint",
+    "package": "webpack --mode production",
+    "watch": "webpack --watch --devtool inline-source-map",
     "lint": "eslint src --ext ts",
-    "test": "node ./out/test/runTest.js",
     "pub": "node ./dist/scripts/publish.js 没有日志"
   },
   "devDependencies": {
@@ -173,6 +168,7 @@
     "mocha": "^9.2.2",
     "ts-loader": "^9.2.8",
     "typescript": "^4.5.5",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "vscode": "^1.1.37",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2"
