--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,13 +1,13 @@
-.vscode/**
-.vscode-test/**
-out/**
-node_modules/**
-src/**
+.editorconfig
 .gitignore
+.prettierrc.js
 .yarnrc
+LICENSE
+tsconfig.json
 webpack.config.js
-vsc-extension-quickstart.md
-**/tsconfig.json
-**/.eslintrc.json
-**/*.map
-**/*.ts
+
+.vscode/**
+dist/**
+node_modules/**
+scripts/**
+src/**
