--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Likan",
   "description": "一个插件",
   "publisher": "likan",
-  "version": "0.6.31",
+  "version": "0.6.33",
   "repository": "https://github.com/LIiErkang/likan",
   "engines": {
     "vscode": "^1.66.0"
@@ -171,21 +171,13 @@
     "vscode:prepublish": "npm run package",
     "package": "webpack --mode production",
     "watch": "webpack --watch --devtool inline-source-map",
-    "lint": "eslint src --ext ts",
-    "pub": "node ./dist/scripts/publish.js 没有日志"
+    "pub": "ts-node ./scripts/publish.ts 没有日志"
   },
   "devDependencies": {
-    "@types/glob": "^7.2.0",
-    "@types/mocha": "^9.1.0",
     "@types/node": "14.x",
     "@types/vscode": "^1.66.0",
-    "@typescript-eslint/eslint-plugin": "^5.20.0",
-    "@typescript-eslint/parser": "^5.20.0",
-    "@vscode/test-electron": "^2.1.3",
-    "eslint": "^8.11.0",
-    "glob": "^7.2.0",
-    "mocha": "^9.2.2",
     "ts-loader": "^9.2.8",
+    "ts-node": "^10.9.1",
     "typescript": "^4.5.5",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "vscode": "^1.1.37",
