--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Likan",
   "description": "一个插件",
   "publisher": "likan",
-  "version": "0.7.17",
+  "version": "0.7.21",
   "repository": "https://github.com/LIiErkang/likan",
   "engines": {
     "vscode": "^1.66.0"
@@ -168,17 +168,17 @@
   },
   "scripts": {
     "vscode:prepublish": "npm run package",
-    "package": "webpack --mode production",
-    "watch": "webpack --watch --devtool inline-source-map",
+    "package": "cross-env NODE_ENV=production webpack --profile --progress",
+    "watch": "cross-env NODE_ENV=development webpack --watch",
     "pub": "ts-node ./scripts/publish.ts 没有日志"
   },
   "devDependencies": {
     "@types/node": "14.x",
     "@types/vscode": "^1.66.0",
+    "cross-env": "^7.0.3",
     "ts-loader": "^9.2.8",
     "ts-node": "^10.9.1",
     "typescript": "^4.5.5",
-    "uglifyjs-webpack-plugin": "^2.2.0",
     "vscode": "^1.1.37",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2"
