--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "target": "ES2020",
-    "lib": ["ES2020"],
+    "target": "ESNext",
+    "lib": ["ESNext"],
     "sourceMap": false,
     "strict": true,
     "baseUrl": "./",
@@ -13,6 +13,6 @@
     },
     "outDir": "dist"
   },
-  "include": ["./scripts/", "./src/"],
+  "include": ["**/*.ts", "**/*.js"],
   "exclude": ["node_modules", "dist", "lib"]
 }
