--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Likan",
   "description": "一个插件",
   "publisher": "likan",
-  "version": "0.7.25",
+  "version": "0.7.27",
   "repository": "https://github.com/LIiErkang/likan",
   "engines": {
     "vscode": "^1.66.0"
@@ -175,6 +175,7 @@
     "@types/node": "14.x",
     "@types/vscode": "^1.66.0",
     "cross-env": "^7.0.3",
+    "standard-version": "^9.5.0",
     "ts-loader": "^9.2.8",
     "ts-node": "^10.9.1",
     "typescript": "^4.5.5",
