feat(新增更新日志): 添加自动化生成日志和提交

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,5 +28,6 @@
     "titleBar.inactiveForeground": "#e7e7e799",
     "tab.activeBorder": "#ba878b"
   },
-  "peacock.color": "#a7676c"
+  "peacock.color": "#a7676c",
+  "likan.npm.manager": "yarn"
 }
