--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Likan",
   "description": "一个插件",
   "publisher": "likan",
-  "version": "0.7.27",
+  "version": "0.7.28",
   "repository": "https://github.com/LIiErkang/likan",
   "engines": {
     "vscode": "^1.66.0"
@@ -170,7 +170,7 @@
     "package": "cross-env NODE_ENV=production webpack --profile --progress",
     "dev": "cross-env NODE_ENV=development webpack --watch",
     "release": "standard-version",
-    "commit": "git add . && git-cz"
+    "commit": "git-cz"
   },
   "devDependencies": {
     "@types/node": "14.x",
