--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,10 +13,10 @@ jobs:
     name: initialize
     runs-on: ubuntu-latest
     steps:
-      - run: npm i -g yarn vsce
-        uses: actions/setup-node@v1
+      - uses: actions/setup-node@v1
         with:
           node-version: 16.14.0
+      - run: npm i -g yarn vsce
       - run: yarn
 
   publish:
