--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,6 +22,6 @@ jobs:
   publish:
     name: publish
     runs-on: ubuntu-latest
-    needs: [initialize, package]
+    needs: [initialize]
     steps:
       - run: vsce publish
