--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,19 +9,20 @@ on:
     #   - chore*
 
 jobs:
-  initialize:
-    name: initialize
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 16.14.0
-      - run: npm i -g yarn vsce
-      - run: yarn
-
   publish:
-    name: publish
     runs-on: ubuntu-latest
-    needs: [initialize]
+    strategy:
+      matrix:
+        node-version: [12.x, 14.x, 16.x]
     steps:
-      - run: vsce publish
+      - uses: actions/setup-node@v3
+
+      - name: initialize
+        run: |
+          npm i -g yarn vsce
+          yarn
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      - name: publish
+        run: vsce publish
