--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,14 +15,14 @@ jobs:
       matrix:
         node-version: [12.x, 14.x, 16.x]
     steps:
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v3
 
-      - name: initialize
-        run: |
-          npm i -g yarn vsce
-          yarn
+      - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
 
-      - name: publish
-        run: vsce publish
+      - run: |
+          npm i -g yarn vsce
+          yarn
+
+      - run: vsce publish
