--- a/package.json
+++ b/package.json
@@ -171,7 +171,7 @@
     "dev": "cross-env NODE_ENV=development webpack --watch",
     "release": "standard-version",
     "commit": "git-cz",
-    "publish": "vsce publish"
+    "publish": "vsce publish --no-yarn"
   },
   "devDependencies": {
     "@types/node": "14.x",
